[tool.poetry]
name = "roboticarm"
version = "0.1.0"
description = "robotic arm planner based on pybullet"
authors = ["AnnexK <roadto3kmmr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybullet = "^3.2.5"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pyserial = "^3.5"
pydantic = "^1.10.6"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"
requests = "^2.31.0"
types-requests = "^2.31.0.0"
numpy = "^1.24.3"
pylint = "^2.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "./stubs"

[[tool.mypy.overrides]]
module = 'pybullet'
ignore_errors = true
ignore_missing_imports = true

[tool.pylint.master]
disable = ['c-extension-no-member']