[tool.poetry]
name = "roboticarm"
version = "0.1.0"
description = "robotic arm planner based on pybullet"
authors = ["AnnexK <roadto3kmmr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybullet = "^3.2.5"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pyserial = "^3.5"
pydantic = "^1.10.6"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
numpy = "^1.24.3"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
flake8-docstrings = "^1.7.0"
black = "^23.3.0"
types-pyserial = "^3.5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "./stubs"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = 'pybullet'
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'matplotlib.*'
ignore_errors = true
ignore_missing_imports = true

[tool.flake8]
ignore = [
       "D100", # Missing module docstring
       "D104", # Missing package docstring
]
max_line_length = 120

[tool.black]
line-length = 120