[tool.poetry]
name = "roboticarm"
version = "0.1.0"
description = "robotic arm planner based on pybullet"
authors = ["AnnexK <roadto3kmmr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybullet = "^3.2.5"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pyserial = "^3.5"
pydantic = "^1.10.6"


[tool.poetry.group.dev.dependencies]
types-pyserial = "^3.5.0.8"
mypy = "^1.3.0"
black = "^23.3.0"
ruff = "^0.0.272"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "./stubs"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = 'pybullet'
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'matplotlib.*'
ignore_errors = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
select = [
  "E",   # pycodestyle Error
  "W",   # pycodestyle Warning
  "F",   # pyflakes
  "D",   # pydocstyle
  "N",   # pep8-naming
  "FIX", # FIXME
  "ARG", # flake8-unused-args
  "TID", # flake8-tidy-imports
  "C90", # mccabe
  "T20", # flake8-print
]
ignore = [
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
]
fix = false

[tool.black]
line-length = 120